--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -35,6 +35,16 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Categories
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="expenses">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Expenses
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="expenses/new">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> AddExpense
+            </NavLink>
+        </div>
     </nav>
 </div>
 
