--- a/Components/Pages/Todo.razor
+++ b/Components/Pages/Todo.razor
@@ -1,6 +1,7 @@
 ﻿@page "/todo"
 @rendermode InteractiveServer
 
+<PageTitle>ToDo</PageTitle>
 <h3>Todo (@todos.Count(todo => !todo.IsDone))</h3>
 <ol>
     @foreach (var todo in todos)
