Tema 3.3 finished - fara componenta

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -45,6 +45,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> AddExpense
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="incomes">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Incomes
+            </NavLink>
+        </div>
     </nav>
 </div>
 
