--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -14,7 +14,7 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
@@ -29,7 +29,7 @@
             <NavLink class="nav-link" href="todo">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Todo
             </NavLink>
-        </div>
+        </div> *@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="categories">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Categories
@@ -48,6 +48,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="incomes">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Incomes
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="incomes/new">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> AddIncomes
             </NavLink>
         </div>
     </nav>
