--- a/Components/ExpenseForm.razor
+++ b/Components/ExpenseForm.razor
@@ -3,7 +3,7 @@
 @inject ExpenseService ExpenseService;
 @inject CategoryService CategoryService
 
-<h3>ExpenseForm</h3>
+@* <h3>ExpenseForm</h3> *@
 
 @if (categories == null)
 {
@@ -12,25 +12,25 @@
 else
 {
     <form @onsubmit="HandleValidSubmit">
-        <div>
+        <div class="form-group mt-3">
             <label for="title">Title</label>
-            <input type="text" id="title" @bind="expense.Title" required />
+            <input type="text" class="form-control" id="title" @bind="expense.Title" required />
         </div>
-        <div>
+        <div class="form-group mt-3">
             <label for="date">Date</label>
-            <input type="date" id="date" @bind="expense.Date" required />
+            <input type="date" class="form-control" id="date" @bind="expense.Date" required />
         </div>
-        <div>
+        <div class="form-group mt-3">
             <label for="amount">Amount</label>
-            <input type="number" id="amount" step="0.01" @bind="expense.Amount" required />
+            <input type="number" class="form-control" id="amount" step="0.01" @bind="expense.Amount" required />
         </div>
-        <div>
+        <div class="form-group form-check mt-3">
             <label for="planned">Planned</label>
-            <input type="checkbox" id="planned" @bind="expense.Planned" />
+            <input type="checkbox" class="form-check-input" id="planned" @bind="expense.Planned" />
         </div>
-        <div>
+        <div class="form-group mt-3">
             <label for="category">Category</label>
-            <select id="category" @bind="expense.CategoryId" required>
+            <select id="category" class="form-control" @bind="expense.CategoryId" required>
                 <option value="">Select a category</option>
                 @foreach (var category in categories)
                 {
@@ -38,7 +38,7 @@ else
                 }
             </select>
         </div>
-        <button type="submit">@SubmitButtonText</button>
+        <button type="submit" class="btn btn-primary mt-3">@SubmitButtonText</button>
     </form>
 }
 
