--- a/Components/Pages/ExpensesPerCategory.razor
+++ b/Components/Pages/ExpensesPerCategory.razor
@@ -7,17 +7,17 @@
 <PageTitle>Category @categoryId</PageTitle>
 <h3>Expenses for Category @category?.Name</h3>
 
-@if (expenses == null)
+@if (category?.Expenses == null)
 {
 	<p>Loading...</p>
 }
-else if (expenses.Count == 0)
+else if (category?.Expenses.Count == 0)
 {
 	<p>No expenses found for this category.</p>
 }
 else
 {
-	<ExpensesList expenses="expenses" />
+	<ExpensesList expenses="category?.Expenses" />
 }
 
 @if (!string.IsNullOrEmpty(errorMessage))
@@ -29,7 +29,7 @@ else
 	[Parameter]
 	public int categoryId { get; set; }
 	private Category category;
-	private List<Expense> expenses;
+	// private List<Expense> expenses;
 	private string errorMessage;
 
 	protected override async Task OnInitializedAsync()
@@ -37,8 +37,9 @@ else
 		try
 		{
 			// expenses = await ExpenseService.GetAllExpensesAsync();
-			category = await CategoryService.GetCategoryByIdAsync(categoryId);
-			expenses = await ExpenseService.GetExpensesByCategoryIdAsync(categoryId);
+			category = await CategoryService.GetCategoryByIdAsync(categoryId); // asta aduce si expenses
+
+			// expenses = await ExpenseService.GetExpensesByCategoryIdAsync(categoryId); // nu mai e nevoie
 		}
 		catch (Exception ex)
 		{
