--- a/Components/Pages/Categories.razor
+++ b/Components/Pages/Categories.razor
@@ -6,29 +6,38 @@
 
 <PageTitle>Categories</PageTitle>
 <h3>Categories</h3>
-<ul>
-	@if (categories == null)
-    {
-        <li>Loading...</li>
-    }
-    else
-    {
-        @foreach (var category in categories)
+
+<h5>Search Category by ID</h5>
+<form @onsubmit="SearchCategory">
+    <input type="number" class="form-group" @bind="searchCategoryId" placeholder="Category ID" />
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
+<div class="card" style="width: 18rem;">
+    <ul class="list-group list-group-flush">
+	    @if (categories == null)
         {
-            <li>
-                @category.Id - <a href="/categories/@category.Id">@category.Name</a>
-                <button @onclick="() => DeleteCategory(category.Id)" class="btn btn-primary">Delete</button>
-                <button @onclick="() => StartEdit(category)" class="btn btn-primary">Edit</button>
-            </li>
+            <li class="list-group-item">Loading...</li>
         }
-    }
-</ul>
+        else
+        {
+            @foreach (var category in categories)
+            {
+                <li class="list-group-item">
+                    <a href="/categories/@category.Id" class="badge badge-primary">@category.Id - @category.Name</a>
+                    <button @onclick="() => DeleteCategory(category.Id)" class="btn btn-primary">Delete</button>
+                    <button @onclick="() => StartEdit(category)" class="btn btn-primary">Edit</button>
+                </li>
+            }
+        }
+    </ul>
+</div>
 
 @if (editCategory != null)
 {
     <h5>Edit Category</h5>
     <form @onsubmit="UpdateCategory">
-        <input type="hidden" @bind="editCategory.Id" />
+        <input type="hidden" class="form-group" @bind="editCategory.Id" />
         <input type="text" @bind="editCategory.Name" />
         <button type="submit" class="btn btn-primary">Save</button>
         <button @onclick="CancelEdit" class="btn btn-primary">Cancel</button>
@@ -43,17 +52,11 @@
 <p></p>
 <h5>Add a New Category</h5> 
 <form @onsubmit="AddCategory">
-    <input type="number" @bind="newCategoryId" placeholder="Category ID" />
+    <input type="number" class="form-group" @bind="newCategoryId" placeholder="Category ID" />
     <input type="text" @bind="newCategoryName" placeholder="Category Name" />
     <button type="submit" class="btn btn-primary">Add</button>
 </form>
 
-<p></p>
-<h5>Search Category by ID</h5>
-<form @onsubmit="SearchCategory">
-    <input type="number" @bind="searchCategoryId" placeholder="Category ID" />
-    <button type="submit" class="btn btn-primary">Search</button>
-</form>
 
 @if (searchResultCategory != null)
 {
